<resources>
    <string name="app_name">电梯管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="head_btn_back">返回</string>
    <string name="head_btn_save">保存</string>
    <string name="choice_input">输入设备授权码</string>
    <string name="choice_scan">扫描设备二维码</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="main_tv_choice_language">语言选择:</string>
    <string name="main_tv_language_Chinese">中文</string>
    <string name="main_tv_language_English">English</string>
    <string name="main_tv_teleno">手机号</string>
    <string name="main_tv_vcode">验证码</string>
    <string name="main_tv_login">登录</string>
    <string name="main_tv_getvecode">获取验证码</string>
    <string name="choice_btn_submit">提交</string>
    <string name="main_tab_rb_setting">设置</string>
    <string name="main_tab_rb_test">测试</string>
    <string name="main_tab_rb_monitor">监控</string>
    <string name="main_tab_rb_trouble">故障</string>
    <string name="main_tab_logining">登录中...</string>
    <string name="main_company">中秀科技(无锡)有限公司</string>
    <string name="main_location_tip_title">定位提示</string>
    <string name="main_location_message">需要获取您的位置信息，请您勾选移动网络和Wi-FI定位选项!</string>
    <string name="ui_title_login">用户登录</string>
    <string name="ui_title_choice">选择设备</string>
    <string name="ui_title_monitor">监控</string>
    <string name="ui_title_monitor_drive_state">驱动状态</string>
    <string name="ui_title_monitor_port_state">端口状态</string>
    <string name="ui_title_trouble">故障</string>
    <string name="ui_title_auto_study">自学习</string>
    <string name="ui_choice_hint">输入或扫描设备授权码</string>
    <string name="ui_title_codescan">扫描设备二维码</string>
    <string name="ui_title_setting">设置</string>
    <string name="ui_title_setting_basic">基本参数设置</string>
    <string name="ui_title_elec_basic">电机参数</string>
    <string name="ui_title_elec_auto_study_param">电机自学习参数</string>
    <string name="ui_title_well_auto_study_param">进道自学习参数</string>
    <string name="ui_title_floor_door_setting">层楼前后门设置</string>
    <string name="ui_title_floor_display_setting">层楼显示设置</string>
    <string name="ui_title_device_info">设备信息</string>
    <string name="ui_title_mainbord_input_setting">主板输入逻辑设置</string>
    <string name="ui_title_change_device">设备更换</string>
    <string name="ui_title_device_test">测试</string>
    <string name="ui_title_device_test_vector_control_params">矢量控制参数</string>
    <string name="ui_title_soft_about">软件相关</string>
    <string name="ui_title_phone_ime">手机识别号</string>
    <string name="ui_title_run_control_params">运行控制参数</string>
    <string name="ui_title_time_control_params">时间控制参数</string>
    <string name="ui_title_test_function_params">测试功能参数</string>
    <string name="ui_title_command">指令</string>
    <string name="ui_title_call">召唤</string>
    <string name="ui_title_about_us">关于我们</string>
    <string name="ui_login_success">登录成功</string>
    <string name="ui_trouble_detail">故障信息</string>
    <string name="device_tv_lift_no">电梯编号</string>
    <string name="device_tv_control_no">控制柜编号</string>
    <string name="device_tv_out_datetime">出厂日期</string>
    <string name="device_tv_rated_load">额定载重</string>
    <string name="device_tv_rated_speed">额定速度</string>
    <string name="device_tv_control_way">控制方式</string>
    <string name="device_tv_floor_num">楼层数量</string>
    <string name="device_tv_door_num">门机数量</string>
    <string name="device_tv_reply_default">恢复出厂设置</string>
    <string name="device_tv_reply_last_default">恢复上次设置值</string>
    <string name="device_tv_scan">扫描</string>
    <string name="dlg_recover">恢复</string>
    <string name="dlg_recover_cancle">取消</string>
    <string name="setting_tv_basic_params">基本参数</string>
    <string name="setting_tv_elec_params">电机参数</string>
    <string name="setting_tv_auto_study">自学习</string>
    <string name="setting_tv_change_device">设备更换</string>
    <string name="setting_tv_floor_door_setting">层楼前后门设置</string>
    <string name="setting_tv_floor_display_setting">层楼显示设置</string>
    <string name="setting_tv_mainboard_input_setting">主板逻辑输入设置</string>
    <string name="setting_tv_soft_about">软件相关</string>
    <string name="tv_about_us_content">\t\t中秀科技（无锡）有限公司成立于1995年初，经过15年的艰苦奋斗和开拓创新，现已发展为一家多元化、跨地域，占地面积30000平方米的集团化运作企业。</string>
    <string name="setting_flush_device">刷新请求</string>
    <string name="setting_basicparams_tv_system_time">系统时间</string>
    <string name="setting_basicparams_tv_total_floor">总楼层</string>
    <string name="setting_basicparams_tv_under_floor">地下层</string>
    <string name="setting_basicparams_tv_floor_fixed_speed">电梯额定速度</string>
    <string name="setting_basicparams_tv_floor_run_speed">电梯运行速度</string>
    <string name="setting_basicparams_tv_drag_wheel_dia">曳引轮直径</string>
    <string name="setting_basicparams_tv_drag_rope_scale">曳引绳悬挂比</string>
    <string name="setting_basicparams_tv_speed_cut_scale">减速比</string>
    <string name="setting_basicparams_tv_hight_speed_count_direction">高速计数方向</string>
    <string name="setting_basicparams_tv_elec_model">电机形式</string>
    <string name="setting_basicparams_tv_signal_carrier_rate">载波频率</string>
    <string name="setting_basicparams_tv_drive_control_pattern">驱动控制模式</string>
    <string name="setting_basicparams_tv_fire_protection_leave_floor">消防车撤离层</string>
    <string name="setting_basicparams_tv_parking_floor">驻停层</string>
    <string name="setting_basicparams_tv_back_station_floor">返基站层</string>
    <string name="setting_basicparams_tv_ard_choice">ARD选择</string>
    <string name="setting_basicparams_tv_ard_speed">ARD速度</string>
    <string name="setting_basicparams_tv_control_type">控制方式</string>
    <string name="setting_basicparams_tv_open_door_front">提前开门</string>
    <string name="setting_auto_study_elec">电机自学习</string>
    <string name="setting_auto_study_elec_trouble_no">电机自学习故障编码</string>
    <string name="setting_auto_study_elec_step_1">1.电机基本参数正确输入完毕</string>
    <string name="setting_auto_study_elec_step_2">2. 确认抱闸闭合，人为接通运行接触器</string>
    <string name="setting_auto_study_elec_step_3">3. 点【开始】主机开始自学习，主机发出吱声</string>
    <string name="setting_auto_study_elec_step_4">4. 显示【完成】后，释放运行接触器，自学习结束</string>
    <string name="setting_auto_study_params">参数</string>
    <string name="setting_auto_study_start">开始</string>
    <string name="auto_study_elec_param_asyn_empty_load_elec">异步机空载电流</string>
    <string name="auto_study_elec_param_asyn_stator_resistance">异步机定子电阻</string>
    <string name="auto_study_elec_param_asyn_rotor_resistance">异步机转子电阻</string>
    <string name="auto_study_elec_param_asyn_leakage_oppose">异步机漏感抗</string>
    <string name="auto_study_elec_param_asyn_mutual_oppose">异步机互感抗</string>
    <string name="auto_study_elec_param_syn_start_location">同步机初始位置</string>
    <string name="auto_study_elec_param_syn_cut_elec_location">同步机断电位置</string>
    <string name="auto_study_elec_param_syn_q_elec">同步机Q轴电感</string>
    <string name="auto_study_elec_param_syn_d_elec">同步机D轴电感</string>
    <string name="auto_study_elec_param_auto_study_trouble_decode">自学习故障编码</string>
    <string name="auto_study_elec_param_alternate_elec_resistance">相间线圈电阻</string>
    <string name="setting_auto_study_well">井道自学习</string>
    <string name="setting_auto_study_well_step_1">1. 电梯处于检修状态</string>
    <string name="setting_auto_study_well_step_2">2. 电梯停止在首层</string>
    <string name="setting_auto_study_well_step_3">3. 点井道自学习【开始】</string>
    <string name="setting_auto_study_well_step_4">4. 按下检修上行按钮，电梯上行</string>
    <string name="setting_auto_study_well_step_5">5. 直至电梯运行到最高层停止</string>
    <string name="setting_auto_study_well_step_6">6. 当显示【完成】后，自学习结束</string>
    <string name="auto_study_well_param_hight_total">总高度</string>
    <string name="auto_study_well_param_up_cut_one_count">上强减1脉冲数</string>
    <string name="auto_study_well_param_down_cut_one_count">上强减1脉冲数</string>
    <string name="auto_study_well_param_up_cut_two_count">上强减2脉冲数</string>
    <string name="auto_study_well_param_down_cut_two_count">上强减2脉冲数</string>
    <string name="auto_study_well_param_floor_location">楼位置值</string>
    <string name="auto_study_well_param_interlamination_pulse">层间脉冲值</string>
    <string name="auto_study_well_param_upstream_synch">上行同步值</string>
    <string name="auto_study_well_param_downstream_synch">下行同步值</string>
    <string name="setting_elec_params_rate__power">电机额定功率</string>
    <string name="setting_elec_params_rate__frequency">电机额定频率</string>
    <string name="setting_elec_params_rate_rotate_speed">电机额定转速</string>
    <string name="setting_elec_params_rate_voltage">电机额定电压</string>
    <string name="setting_elec_params_rate_elec">电机额定电流</string>
    <string name="setting_elec_params_double_num">电机极对数</string>
    <string name="setting_elec_params_run_dir">电机运行方向</string>
    <string name="setting_elec_params_overload_ratio">过载系数</string>
    <string name="setting_elec_params_overload_time">过载时间</string>
    <string name="setting_elec_params_encoder_type">编码器类型</string>
    <string name="setting_elec_params_encoder_resolution">编码器分辨率</string>
    <string name="setting_elec_params_encoder_dir">编码器方向</string>
    <string name="setting_elec_params_encoder_test_enabled">编码器断线检测使能</string>
    <string name="setting_elec_params_encoder_test_time">编码器断线检测时间</string>
    <string name="setting_mainbord_funciton_x1_x8">X1-X8设定值</string>
    <string name="setting_mainbord_funciton_x11_x18">X11-X18设定值</string>
    <string name="setting_mainbord_funciton_x21_x28">X21-X28设定值</string>
    <string name="setting_mainbord_funciton_x27">X27设定值</string>
    <string name="setting_mainbord_funciton_x28">X28设定值</string>
    <string name="setting_mainbord_funciton_y7">Y7设定值</string>
    <string name="setting_mainbord_funciton_y8">Y8设定值</string>
    <string name="setting_floor_door_front">前门</string>
    <string name="setting_floor_door_back">后门</string>
    <string name="setting_soft_update">软件升级</string>
    <string name="setting_soft_about_us">关于我们</string>
    <string name="setting_soft_phone_id">手机识别号</string>
    <string name="setting_soft_login_out">退出登录</string>
    <string name="setting_soft_version">版本</string>
    <string name="test_tv_vector_control_params">矢量控制参数</string>
    <string name="test_tv_run_control_params">运行控制参数</string>
    <string name="test_tv_time_control_params">时间控制参数</string>
    <string name="test_tv_test_function_params">测试功能参数</string>
    <string name="test_tv_fast_debug_params">快速调试</string>
    <string name="test_vector_controlparams_speed_add_one">速度环比例增益1</string>
    <string name="test_vector_controlparams_speed_score_one">速度环积分时间1</string>
    <string name="test_vector_controlparams_speed_full_uplimt_one">速度环饱和上限1</string>
    <string name="test_vector_controlparams_switch_frequency_one">切换频率</string>
    <string name="test_vector_controlparams_speed_add_two">速度环比例增益2</string>
    <string name="test_vector_controlparams_speed_score_two">速度环积分时间2</string>
    <string name="test_vector_controlparams_speed_full_uplimt_two">速度环饱和上限2</string>
    <string name="test_vector_controlparams_elec_add">电流环比例增益</string>
    <string name="test_vector_controlparams_elec_score">电流环积分时间</string>
    <string name="trouble_detail_tv_datetime">故障日期</string>
    <string name="trouble_detail_tv_time">故障时间</string>
    <string name="trouble_detail_tv_no">故障代码</string>
    <string name="trouble_detail_tv_current_location">当前位置</string>
    <string name="trouble_detail_tv_current_floor">当前楼层</string>
    <string name="trouble_detail_tv_input_info">输入信息</string>
    <string name="trouble_detail_tv_out_info">输出信息</string>
    <string name="trouble_detail_tv_curve_info">曲线信息</string>
    <string name="trouble_detail_tv_give_speed">给定速度</string>
    <string name="trouble_detail_tv_feedback_speed">反馈速度</string>
    <string name="trouble_detail_tv_parent_voltage">母线电压</string>
    <string name="trouble_detail_tv_out_elec">输出电流</string>
    <string name="trouble_detail_tv_out_rate">输出频率</string>
</resources>