<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Item_ScrollView_Sytle" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/g_round_box_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_up_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_datetime" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="2013.09.01" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_time" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="20:08:00" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_no" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="02" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_current_location" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="300" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_current_floor" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="20层" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_input_info" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="00FF" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_out_info" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="00DD" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_curve_info" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="额定" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_give_speed" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="400转" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_feedback_speed" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="400转" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_parent_voltage" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="100伏特" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_out_elec" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="100安培" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/trouble_detail_tv_out_rate" />

            <TextView
                style="@style/Item_Right_TextView_Style"
                android:text="500赫兹" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>