<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Item_ScrollView_Sytle" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/g_round_box_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/device_test_rl_vector_control_params"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_up_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/test_tv_vector_control_params" />

            <ImageView style="@style/Item_ImageMore_Sytle" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
             android:id="@+id/device_test_rl_run_control_params"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/test_tv_run_control_params" />

            <ImageView style="@style/Item_ImageMore_Sytle" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:id="@+id/device_test_rl_time_control_params"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/test_tv_time_control_params" />

            <ImageView style="@style/Item_ImageMore_Sytle" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
             android:id="@+id/device_test_rl_test_function_control_params"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/test_tv_test_function_params" />

            <ImageView style="@style/Item_ImageMore_Sytle" />
        </RelativeLayout>

        <View style="@style/Item_Devide_Solid_Line_Style" />

        <RelativeLayout
            android:id="@+id/device_fast_rl_fast_debug"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/setting_down_selector"
            android:clickable="true" >

            <TextView
                style="@style/Item_Left_TextView_Style"
                android:text="@string/test_tv_fast_debug_params" />

            <ImageView style="@style/Item_ImageMore_Sytle" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>